tests/files/lexer_tests/should_fail/110.cmdr
//Should not parse due to unterminated scope
if (true) echo hi;}